loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:9: error: not found: value avancer
    avancer ;
    ^Poucet1:18: error: not found: value avancer
avancer;  
^