loopdowhile.Poucet1.scala.code
var baggles = 0

while(!sortieTrouvee){
  
  
  baggles = 0
  
  for(i<- 1 to 5){
    avancer ;
    if(estSurBiscuit) baggles += 1;
  }
  
  if(baggles <= 2) droite;
  else gauche;
  
  
}
avancer; 